# factorio-lib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/factorio-data-structs/: Cargo.toml
crates/factorio-data-structs/src/: lib.rs
crates/factorio-prototypes/: Cargo.toml
crates/factorio-prototypes-macros/: Cargo.toml
crates/factorio-prototypes-macros/src/: lib.rs
crates/factorio-prototypes/src/: abstract_prototypes.rs  lib.rs  utility.rs
crates/factorio-prototypes/src/additional_types/: attack_parameters.rs  autoplace.rs  graphics.rs  mod.rs  sound.rs  style_specification.rs  tip_trigger.rs  trigger.rs
crates/factorio-runtime/: Cargo.toml
crates/factorio-runtime/src/: concepts.rs  lib.rs
crates/factorio-web-util/: Cargo.toml
crates/factorio-web-util/src/: lib.rs  mod_upload.rs
factorio-lib-rs-derive/: Cargo.toml
factorio-lib-rs-derive/src/: lib.rs
src/: concepts.rs  data_structs.rs  lib.rs  mod_structs.rs  prototype_type.rs  prototypes.rs  types.rs
src/prototypes/: abstract.rs  abstract_prototypes.rs  mod.rs  prototype_type.rs  utility.rs
src/prototypes/additional_types/: attack_parameters.rs  autoplace.rs  capsule_action.rs  graphics.rs  mod.rs  sound.rs  style_specification.rs  tile_transitions.rs  tip_trigger.rs  trigger.rs
src/types/: attack_parameters.rs  autoplace.rs  capsule_action.rs  graphics.rs  mod.rs  sound.rs  style_specification.rs  tile_transitions.rs  tip_trigger.rs  trigger.rs
src/util/: defaults.rs  fixed_serde.rs  mod.rs
src/webapi/: auth.rs  mod.rs  mod_upload.rs
