[package]
name = "factorio-lib-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["prototypes", "concepts", "data_structs", "webapi"]
prototypes = ["factorio-lib-rs-derive", "macro_rules_attribute", "strum", "strum_macros", "lua", "serde"]
concepts = ["rust-ini"]
data_structs = ["lexical-sort", "serde", "semver", "itertools", "regex", "once_cell", "strum", "strum_macros"]
webapi = ["data_structs", "const_format", "reqwest", "tokio"]
lua = ["mlua"]

[dependencies]
# Non-optional
thiserror = "1.0"
# Optional
mlua = { version = "0.8.0", package = "factorio-mlua", features = ["serialize", "lua-factorio"], optional = true }
factorio-lib-rs-derive = { path = "./factorio-lib-rs-derive", optional = true }
strum = { version = "0.24", features = ["derive"], optional = true }
strum_macros = { version = "0.24", optional = true }
rust-ini = { version = "0.18", optional = true }
lexical-sort = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
semver = { version = "1.0", features = ["serde"], optional = true }
itertools = { version = "0.10", optional = true }
regex = { version = "1.5", optional = true }
once_cell = { version = "1.10", optional = true }
const_format = { version = "0.2", optional = true }
reqwest = { version = "0.11", optional = true, features = ["json", "stream"] }
tokio = { version = "1.17", optional = true, features = ["fs"] }
macro_rules_attribute = { version = "0.1", optional = true }
serde-transcode = { version = "1.1", optional = true }
serde_json = { version = "1.0", optional = true }
