[workspace]
members = [ "crates/factorio-data-structs", "crates/factorio-prototypes", "crates/factorio-prototypes-macros", "crates/factorio-runtime", "crates/factorio-web-util"]

[package]
name = "factorio-lib-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["prototypes", "runtime", "data_structs", "webapi"]
prototypes = ["factorio-prototypes"]
data_structs = ["factorio-data-structs"]
webapi = ["factorio-web-util"]
runtime = ["factorio-runtime"]

[dependencies]
# Non-optional
thiserror = { workspace = true }
# Optional
fixed = { version = "1.23", features = ["serde"], optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
lexical-sort = { version = "0.3", optional = true }
serde = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
itertools = { version = "0.10", optional = true }
regex = { workspace = true, optional = true }
once_cell = { version = "1.10", optional = true }
const_format = { version = "0.2", optional = true }
reqwest = { version = "0.11", optional = true, features = ["json", "stream"] }
tokio = { version = "1.17", optional = true, features = ["fs"] }
macro_rules_attribute = { version = "0.1", optional = true }
serde-transcode = { version = "1.1", optional = true }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.0", optional = true}
factorio-web-util = { path = "crates/factorio-web-util", version = "0.1", optional = true }
factorio-data-structs = { path = "crates/factorio-data-structs", version = "0.1", optional = true }
factorio-prototypes = { path = "crates/factorio-prototypes", version = "0.1", optional = true }
factorio-runtime = { path = "crates/factorio-runtime", version = "0.1", optional = true }

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
thiserror = "1.0"
semver = { version = "1.0", features = ["serde"] }
regex = "1.5"
