[workspace]
members = [ "crates/factorio-data-structs", "crates/factorio-prototypes", "crates/factorio-prototypes-macros", "crates/factorio-runtime", "crates/factorio-web-util"]

[package]
name = "factorio-lib-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["prototypes", "runtime", "data_structs", "webapi"]
prototypes = ["factorio-prototypes"]
data_structs = ["factorio-data-structs"]
webapi = ["factorio-web-util"]
runtime = ["factorio-runtime"]

[dependencies]
factorio-web-util = { path = "crates/factorio-web-util", version = "0.1", optional = true }
factorio-data-structs = { path = "crates/factorio-data-structs", version = "0.1", optional = true }
factorio-prototypes = { path = "crates/factorio-prototypes", version = "0.1", optional = true }
factorio-runtime = { path = "crates/factorio-runtime", version = "0.1", optional = true }

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
thiserror = "1.0"
semver = { version = "1.0", features = ["serde"] }
regex = "1.5"
