[package]
name = "factorio-data-structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
itertools = { version = "0.10" }
lexical-sort = { version = "0.3" }
once_cell = { version = "1.10" }
