[package]
name = "factorio-prototypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }
factorio-prototypes-macros = { path = "../factorio-prototypes-macros", version = "0.1" }
thiserror = { workspace = true }
serde_default_utils = "0.2.1"
serde-inline-default = "0.1.1"
