[package]
name = "factorio-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.8.0", package = "factorio-mlua", features = ["serialize", "lua-factorio"]}
thiserror = { workspace = true }
rust-ini = { version = "0.18"}
