[package]
name = "factorio-web-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = { version = "0.2" }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.17", features = ["fs"] }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true}
semver = { workspace = true }
factorio-data-structs = { path = "../factorio-data-structs", version = "0.1" }
